[tool.poetry]
name = "twittercrawler"
version = "0.1.0"
description = "A script to download all the available tweets from a Twitter user"
authors = ["valeriobasile <valerio.basile@unito.it>>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
requests-oauthlib = "^1.3.0"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
